--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,10 @@ script:
   
   # Run tests!
 
-  # build and push link-lives-elasticsearch image
-  - docker build -f ./elasticsearch.Dockerfile  -t link-lives-elasticsearch ./elasticsearch
-  - docker tag link-lives-elasticsearch 282251075226.dkr.ecr.eu-west-1.amazonaws.com/link-lives-elasticsearch:latest
-  - docker push 282251075226.dkr.ecr.eu-west-1.amazonaws.com/link-lives-elasticsearch:latest
+  # build and push linklives-elasticsearch image
+  - docker build -f ./elasticsearch.Dockerfile  -t linklives-elasticsearch ./elasticsearch
+  - docker tag linklives-elasticsearch 282251075226.dkr.ecr.eu-west-1.amazonaws.com/linklives-elasticsearch:latest
+  - docker push 282251075226.dkr.ecr.eu-west-1.amazonaws.com/linklives-elasticsearch:latest
 
 deploy:
   - provider: elasticbeanstalk
