--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
   # Run tests!
 
   # build and push linklives-elasticsearch image
-  - docker build -f ./elasticsearch.Dockerfile  -t linklives-elasticsearch ./elasticsearch
+  - docker build -f ./elasticsearch/elasticsearch.Dockerfile  -t linklives-elasticsearch ./elasticsearch
   - docker tag linklives-elasticsearch 282251075226.dkr.ecr.eu-west-1.amazonaws.com/linklives-elasticsearch:latest
   - docker push 282251075226.dkr.ecr.eu-west-1.amazonaws.com/linklives-elasticsearch:latest
 
