--- a/.ebextensions/01-copy-linklives-data-from-s3.config
+++ b/.ebextensions/01-copy-linklives-data-from-s3.config
@@ -1,3 +1,5 @@
 commands: 
-  01-copy-linklives-data-from-s3:
-    command: aws s3 cp s3://linklives-data/LL_v0.2.db /tmp/linklives-data/linklives-data-lastest.db
+  01-clear-local-linklives-data:
+    command: rm -rf /tmp/linklives-data || true
+  02-copy-linklives-data-from-s3:
+    command: aws s3 cp s3://linklives-data/ /tmp/linklives-data/ --recursive
