--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ deploy:
     secret_access_key: ${AWS_SECRET_ACCESS_KEY}
     region: eu-west-1
     app: link-lives-data
-    env: link-lives-data-prod
+    env: link-lives-data
     bucket: elasticbeanstalk-eu-west-1-282251075226
     edge: true
     on:
