Ready for more data
Add mounting of es data
Increase memory substantially

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -16,7 +16,7 @@ services:
     container_name: indexer
     volumes:
       - ./indexer:/indexer
-    cwd: /indexer
+    working_dir: /indexer
     command: pip install -r requirements.txt 
     depends_on:
       - ll-es
